--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -29,7 +29,7 @@ spring:
   #    datasource
   #log4j jdbc
   datasource:
-    url: jdbc:log4jdbc:mysql://106.13.59.160/jpt?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
+    url: jdbc:log4jdbc:mysql://106.13.59.160/ok2?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
     username: root
     password: root
     driver-class-name: net.sf.log4jdbc.DriverSpy
